2015-01-07  François  <francois@dechelle.net>

	* renamed umwsu-scan to uhuru-scan

	* fixed compilation problem w.r.t. CentOS and glib2 version. TODO: check use of g_private_new for glib2 recent versions

2014-11-28  François  <francois@dechelle.net>

	* started implementing the scan daemon

2014-11-05  François  <francois@dechelle.net>

	* added maximum count of error messages in alert.c

2014-10-28  François  <francois@dechelle.net>

	* changed alert reporting URL for HTTPS, added necessary libcurl options

2014-10-16  François  <francois@dechelle.net>

	* fixed compilation problem when building package on ubuntu 12.04

2014-09-26  François  <francois@dechelle.net>

	* changed alert reporting code to use local Perl agent via HTTP/Post request; tested

2014-09-14  François Déchelle  <francois@dechelle.net>

	* fixed status % undecided

2014-09-11  François Déchelle  <francois@dechelle.net>

	* fixed status related bugs after introducing white listed status; tested

2014-09-10  François Déchelle  <francois@dechelle.net>

	* added white listed status for module 1

2014-09-05  François Déchelle  <francois@dechelle.net>

	* changed reporting to send alert immediately instead of waiting for end of scan

2014-09-04  François Déchelle  <francois@dechelle.net>

	* added small test server in python

	* added first callback (report_print in umwsu-scan.c); runs ok

	* tested new implementation with callbacks (no callbacks yet); runs ok

2014-09-03  François Déchelle  <francois@dechelle.net>

	* finished implementation of callbacks; compiles ok

2014-09-02  François Déchelle  <francois@dechelle.net>

	* adding XML report sending to socket; in progress

2014-08-29  François Déchelle  <francois@dechelle.net>

	* adding XML report generation; in progress

	* moved status and report functions to own file

2014-08-28  François Déchelle  <francois@dechelle.net>

	* implemented and tested multi-threaded version of directory scan
