@@ -35,13 +35,12 @@ if test x"$with_libumwsu" != x ; then
 fi
 PKG_PROG_PKG_CONFIG
 
-# check for gmodule
 PKG_CHECK_MODULES(LIBUMWSU, libumwsu, [HAVE_LIBUMWSU=yes], [HAVE_LIBUMWSU=no])
 if test "$HAVE_LIBUMWSU" = "no"; then
    AC_MSG_ERROR("cannot find UMWSU library")
 fi
-LIBUMWSU_MODDIR=$(pkg-config --variable=moduledir libumwsu)
-AC_SUBST(LIBUMWSU_MODDIR)
+#LIBUMWSU_MODDIR=$(pkg-config --variable=moduledir libumwsu)
+#AC_SUBST(LIBUMWSU_MODDIR)
 
 # check for libclamav
 PKG_CHECK_MODULES(LIBCLAMAV, libclamav, [HAVE_LIBCLAMAV=yes], [HAVE_LIBCLAMAV=no])
